@@ -1,11 +1,17 @@
 <?xml version="1.0"?>
-<object name="portal_skins" allow_any="False" cookie_persistence="False"
-   default_skin="Plone Default">
+<object name="portal_skins" allow_any="False" cookie_persistence="False">
 
  <object name="collective_contacts_templates"
     meta_type="Filesystem Directory View"
     directory="collective.contacts:skins/collective_contacts_templates" remove="True"/>
 
- <skin-path name="Collective_contacts Theme" remove="True"/>
+ <object name="collective_contacts_styles"
+    meta_type="Filesystem Directory View"
+    directory="collective.contacts:skins/collective_contacts_styles" remove="True"/>
+
+ <skin-path name="*">
+  <layer name="collective_contacts_templates" remove="True"/>
+  <layer name="collective_contacts_styles" remove="True"/>
+ </skin-path>
 
 </object>
